@@ -14,4 +14,4 @@
 
 SUBDIRS = src
 DIST_SUBDIRS = $(SUBDIRS)
-EXTRA_DIST = README VERSION LICENSE AUTHORS autogen.sh
+EXTRA_DIST = README VERSION LICENSE AUTHORS
